@@ -59,6 +59,7 @@
     for treeviews - e.g. The album count appears under each artist, etc.
 34. Install cantata-dynamic to $prefix/share/cantata - as this is script is not
     intended to be run by users.
+35. Use com.googlecode.cantata instead of org.kde.cantata for DBUS service, etc.
 
 0.9.2
 -----
